--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,7 @@
 name: "Kubernetes Action"
 description: "Interacts with kubernetes clusters calling kubectl commands. Integrates support for AWS EKS."
+env:
+  KUBECTL_CONFIG_DATA: ${{ secrets.KUBECTL_CONFIG_DATA }}
 branding:
   icon: 'anchor'  
   color: 'blue'
@@ -14,5 +16,5 @@ runs:
   using: "docker"
   image: "Dockerfile"
   args:
-    - ${{ secrets.KUBECTL_CONFIG_DATA }}
+    - ${{ KUBECTL_CONFIG_DATA }}
     - ${{ inputs.args }}
